--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -36,7 +36,50 @@
     font-size: 2em;
     margin: 0.67em 0;
   }
+
+  .navbar {
+    display: inline-block;
+    color: pink;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 35px;
+    font-size: 25px;
+    transition: .3s;
+}
+
+.navbar a:hover{
+    color: black;
+}
+
+/* --------- HEADER ---------*/
+/* format for header */
+header {
+  background-color: palegoldenrod;
+  padding: 30px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+}
   
+
+/* --------- FOOTER ---------*/
+/* set icon color to red */
+.fa-heart {
+  color: red;
+}
+
+/* format for footer */
+footer {
+  padding: 30px;
+  clear: both;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+  background: palegoldenrod;
+}
+
+/* format for the h3 inside the footer*/
+footer h3 {
+  font-size: 20px;
+}
   /* Grouping content
      ========================================================================== */
   /**
