--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,19 +13,19 @@
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <span role="img" aria-label="money">🖥️</span>
-        <a href="/">Tech Blog!</a>
-      </h1>
-      <nav>
+      <nav class="navbar">
         <!-- Conditionally render login or logout links -->
         {{#if loggedIn}}
-        <a href="/profile">Home</a>
-        <a href="/dashboard">Dashboard</a>
         <button class="no-button" id="logout">Logout</button>
         {{else}}
+        <a href="/login">Home</a>
+        <a href="/login">Dashboard</a>
         <a href="/login">Login</a>
         {{/if}}
+        <h1>
+          <span role="img" aria-label="money">🖥️</span>
+          <a href="/">Tech Blog!</a>
+        </h1>
       </nav>
     </header>
     <main class="container container-fluid mt-5">
