--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -80,6 +80,63 @@ footer {
 footer h3 {
   font-size: 20px;
 }
+
+.form-group {
+  position: relative;
+  margin: 20px 0 40px;
+  width: 300px;
+}
+
+.form-group input {
+  background-color: transparent;
+  border: 0;
+  border-bottom: 2px #fff solid;
+  display: block;
+  width: 100%;
+  padding: 15px 0;
+  font-size: 18px;
+  color: #fff;
+  position: relative;
+  z-index: 100;
+}
+
+.form-group input:focus,
+.form-group input:valid {
+  /* outline: 0; */
+  border-bottom-color: lightblue;
+}
+
+.form-group label {
+  /* position: absolute; */
+  top: 15px;
+  left: 0;
+  pointer-events: none;
+}
+
+.form-group label span {
+  display: inline-block;
+  font-size: 18px;
+  min-width: 5px;
+  transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.form-group input:focus + label span,
+.form-group input:valid + label span {
+  color: lightblue;
+  transform: translateY(-30px);
+}
+
+.btn {
+  cursor: pointer;
+  display: inline-block;
+  width: 100%;
+  background: lightblue;
+  padding: 15px;
+  font-family: inherit;
+  font-size: 16px;
+  border: 0;
+  border-radius: 5px;
+}
   /* Grouping content
      ========================================================================== */
   /**
