--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,42 +1,24 @@
 <div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
+  <div class="col-12">
+    <h2>Please Login</h2>
 
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">Username:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="username-login">Username:</label>
+        <input class="form-input" type="text" id="username-login"/>
       </div>
       <div class="form-group">
         <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <input class="form-input" type="password" id="password-login"/>
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
-
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
+        <button class="btn btn-primary" type="submit">Login!</button>
       </div>
       <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <p>Don't have an account? <a href="/signup">Register</a></p>
       </div>
     </form>
   </div>
 </div>
 
-<script src="./js/login.js"></script>
+{{!-- <script src="./js/login.js"></script> --}}
