post.handlebars added

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,9 @@
 <!-- Loop over each object in the posts array -->
 {{#each posts as |post| }}
-<div class="row mb-4 project">
+<div class="row mb-4 post">
   <div class="col-12">
     <h2>
-      <a href="/project/{{post.id}}">{{post.title}}</a>
+      <a href="/post/{{post.id}}">{{post.title}}</a>
       <span>Posted by {{post.user.name}} on {{format_date post.created_at}}</span>
     </h2>
   </div>
