--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,14 +13,14 @@
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <nav class="navbar">
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <!-- Conditionally render login or logout links -->
         {{#if loggedIn}}
         <a href="/homepage">Home</a>
         <a href="/profile">Dashboard</a>
         <button class="no-button" id="logout">Logout</button>
         {{else}}
-        <a href="/login">Home</a>
+        <a href="/">Home</a>
         <a href="/login">Dashboard</a>
         <a href="/login">Login</a>
         {{/if}}
