--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,14 +1,14 @@
 <div class="row">
     <div class="col-md-6">
-        <h2>Signup</h2>
+        <h2>Signup!</h2>
         <form class="form signup-form">
             <div class="form-group">
                 <label for="name-signup">Username:</label>
                 <input class="form-input" type="text" id="name-signup" />
             </div>
             <div class="form-group">
-                <label for="email-signup">Password:</label>
-                <input class="form-input" type="text" id="email-signup" />
+                <label for="password-signup">Password:</label>
+                <input class="form-input" type="text" id="password-signup" />
             </div>
             <div class="form-group">
                 <button class="btn btn-primary" type="submit">Sign up!</button>
@@ -20,4 +20,4 @@
     </div>
 </div>
 
-<script src="./js/login.js"></script>
+<script src="./js/signup.js"></script>
