--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <!-- Conditionally render login or logout links -->
         {{#if loggedIn}}
-        <a href="/homepage">Home</a>
+        <a href="/">Home</a>
         <a href="/profile">Dashboard</a>
         <button class="no-button" id="logout">Logout</button>
         {{else}}
