--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -22,3 +22,17 @@
   </div>
 {{/each}}
     
+
+<div>
+  <form class="form comment-form" data-post-id="{{id}}">
+    <div class="form-group">
+      <label for="new-comment">New Comment:</label>
+      <textarea class="form-input" id="new-comment" rows="3"></textarea>
+    </div>
+    <div>
+      <button class="btn btn-primary" type="submit">Add Comment</button>
+    </div>
+  </form>
+</div>
+
+<script src="/js/comments.js"></script>
