--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -8,10 +8,10 @@
             </div>
             <div class="form-group">
                 <label for="password-signup">Password:</label>
-                <input class="form-input" type="text" id="password-signup" />
+                <input class="form-input" type="password" id="password-signup" />
             </div>
             <div class="form-group">
-                <button class="btn btn-primary" type="submit">Sign up!</button>
+                <button class="btn btn-primary" type="submit">Create account</button>
             </div>
             <div class="form-group">
                 <a href="/login">Login instead</a>
