Adding handlebar for creating a new post

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -9,5 +9,5 @@
 {{/each}}
 
 <div>
-    <button class="btn" type="submit">+ New Post</button>
+    <a href="/new"><button class="btn" type="submit">+ New Post</button></a>
 </div>
