--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -19,6 +19,7 @@
    */
   body {
     margin: 0;
+    padding: 0;
   }
   
   /**
@@ -38,11 +39,11 @@
   }
 
   .navbar {
-    display: inline-block;
-    color: pink;
+    background: rgb(238, 199, 190);
+    /* display: inline-block; */
+    /* color: pink; */
     text-decoration: none;
     font-weight: 500;
-    margin-left: 35px;
     font-size: 25px;
     transition: .3s;
 }
@@ -56,12 +57,19 @@
 /* --------- HEADER ---------*/
 /* format for header */
 header {
-  background-color: palegoldenrod;
-  padding: 30px;
+  background-color: rgb(238, 199, 190);
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  text-align: center;
-}
   
+}
+
+.home {
+  /* display: inline-block; */
+  /* padding: 10px; */
+  background-color: #ead4ce; 
+  color: white; 
+  text-align: center; 
+  border-radius: 5px;
+}
 
 
 /* --------- FOOTER ---------*/
@@ -76,7 +84,7 @@ footer {
   clear: both;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-align: center;
-  background: palegoldenrod;
+  background: rgb(238, 199, 190);
 }
 
 /* format for the h3 inside the footer*/
