--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,32 +5,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Blog</title>
+  <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/jass.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://kit.fontawesome.com/b40afd65fb.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <header class="display-flex justify-space-between">
+      <div class="home">
+          <h1>
+            <span role="img" aria-label="money">🖥️</span>
+            <a href="/">Tech Blog!</a>
+          </h1>
+        </div>
+      <nav class="navbar navbar-expand-lg navbar-dark  fixed-top">
         <!-- Conditionally render login or logout links -->
         {{#if loggedIn}}
-        <a href="/">Home</a>
-        <a href="/profile">Dashboard</a>
+        <a class="nav-link" href="/">Home</a>
+        <a class="nav-link" href="/profile">Dashboard</a>
         <button class="no-button" id="logout">Logout</button>
         {{else}}
-        <a href="/">Home</a>
-        <a href="/login">Dashboard</a>
-        <a href="/login">Login</a>
+        <a class="nav-link" href="/">Home</a>
+        <a class="nav-link" href="/login">Dashboard</a>
+        <a class="nav-link" href="/login">Login</a>
         {{/if}}
-        <h1>
-          <span role="img" aria-label="money">🖥️</span>
-          <a href="/">Tech Blog!</a>
-        </h1>
+        
+        
+
+      
       </nav>
+
     </header>
-    <main class="container container-fluid mt-5">
+    <main class="container container-fluid mt-5 pt-5">
       <!-- Render the sub layout -->
       {{{ body }}}
       
