--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -52,7 +52,24 @@
     color: black;
 }
 
+#logout {
 
+  display: inline-block;
+  padding: 5px 10px;
+  font-size: 26px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #007BFF;
+  border-radius: 6px;
+  border: none;
+  transition: background-color 0.3s ease;
+}
+
+#logout:hover {
+  background-color: #0056b3;
+}
 
 /* --------- HEADER ---------*/
 /* format for header */
@@ -63,8 +80,8 @@ header {
 }
 
 .home {
-  /* display: inline-block; */
-  /* padding: 10px; */
+  display: inline-block;
+  padding: 10px;
   background-color: #ead4ce; 
   color: white; 
   text-align: center; 
