--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -9,7 +9,7 @@
         <input class="form-input" type="text" id="newpost-content"/>
       </div>
       <div class="form-group">
-        <a href="/profile"><button class="btn btn-primary" type="submit">Create Post</button></a>
+        <button class="btn btn-primary" type="submit">Create Post</button>
       </div>
     </form>
 </div>
