--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,5 +10,5 @@
 {{/each}}
 
 <div>
-    <a href="/new"><button class="btn" type="submit">+ New Post</button></a>
+    <a href="api/posts/new"><button class="btn" type="submit">+ New Post</button></a>
 </div>
