--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
   <title>Tech Blog</title>
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/jass.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://kit.fontawesome.com/b40afd65fb.js" crossorigin="anonymous"></script>
@@ -44,10 +45,10 @@
     </main>
     
     <footer>
-      <h3>Made with <i class="fa-solid fa-heart"></i> by Silvia Reyes</h2><br>
-      <p>
-          &copy; 2024 Tech Blog. All rights reserved.
-      </p>
+      <h3>&copy; 2024 Silvia Reyes. All rights Reserved</h2>
+      <a href="https://github.com/NathaliaReyes" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/silvia-reyes-2b907123b/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://nathaliareyes.github.io/portfolio/" target="_blank"><i class="fas fa-briefcase"></i></a>
     </footer>
   </div>
 
