--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,21 +1,21 @@
-<div class="row">
+<div class="containerform">
   <div class="col-12">
     <h2>Please Login</h2>
 
     <form class="form login-form">
       <div class="form-group">
+        <input type="text" id="username-login" required/>
         <label for="username-login">Username:</label>
-        <input class="form-input" type="text" id="username-login"/>
       </div>
       <div class="form-group">
+        <input  type="password" id="password-login" required/>
         <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login"/>
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">Login!</button>
+      <div>
+        <button class="btnform" type="submit">Login!</button>
       </div>
-      <div class="form-group">
-        <p>Don't have an account? <a href="/signup">Register</a></p>
+      <div>
+        <p class="text">Don't have an account? <a href="/signup">Register</a></p>
       </div>
     </form>
   </div>
