--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,19 +1,19 @@
-<div class="row">
-    <div class="col-md-6">
+<div class="containerform">
+    <div class="col-12">
         <h2>Signup!</h2>
         <form class="form signup-form">
             <div class="form-group">
+                <input type="text" id="name-signup" required/>
                 <label for="name-signup">Username:</label>
-                <input class="form-input" type="text" id="name-signup" />
             </div>
             <div class="form-group">
+                <input type="password" id="password-signup" required/>
                 <label for="password-signup">Password:</label>
-                <input class="form-input" type="password" id="password-signup" />
             </div>
-            <div class="form-group">
-                <button class="btn btn-primary" type="submit">Create account</button>
+            <div>
+                <button class="btnform" type="submit">Create account</button>
             </div>
-            <div class="form-group">
+            <div class="text">
                 <a href="/login">Login instead</a>
             </div>
         </form>
