Styling Homepage handlebar

--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -8,8 +8,8 @@
         <label for="newpost-content">Content:</label>
         <input class="form-input" type="text" id="newpost-content"/>
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">Create Post</button>
+      <div class="button-container">
+        <button class="btn" type="submit">Create Post</button>
       </div>
     </form>
 </div>
