--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,19 +2,19 @@
     <div class="col-12">
         <h2>Signup!</h2>
         <form class="form signup-form">
-            <div class="form-group">
+            <div class="form-group-login">
                 <input type="text" id="name-signup" required/>
                 <label for="name-signup">Username:</label>
             </div>
-            <div class="form-group">
+            <div class="form-group-login">
                 <input type="password" id="password-signup" required/>
                 <label for="password-signup">Password:</label>
             </div>
             <div>
                 <button class="btnform" type="submit">Create account</button>
             </div>
-            <div class="text">
-                <a href="/login">Login instead</a>
+            <div >
+                <p class="text"><a href="/login">Login instead</a></p>
             </div>
         </form>
     </div>
