--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -20,16 +20,20 @@ html {
   * Remove the margin in all browsers.
   */
 body {
-  height: 100vh;
+  /* height: 100vh; */
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 /**
   * Render the `main` element consistently in IE.
   */
 main {
-  display: block;
+  /* display: block; */
+  flex: 1 0 auto;
 }
 
 /**
@@ -93,7 +97,6 @@ header {
 .home {
   display: inline-block;
   padding: 10px;
-  background-color: #ead4ce; 
   color: white; 
   text-align: center; 
   border-radius: 5px;
@@ -105,10 +108,11 @@ header {
 /* format for footer */
 footer {
   padding: 30px;
-  clear: both;
+  /* clear: both; */
   font-family: inherit;
   text-align: center;
   background: #4c4cb0;
+  flex-shrink: 0;
 }
 
 /* format for the h3 inside the footer*/
@@ -117,7 +121,7 @@ footer h3 {
   color: #fff;
 }
 
-.form-group {
+.form-group-login {
   color: #fff;
   font-family: 'Muli', sans-serif;
   /* display: flex; */
@@ -128,11 +132,10 @@ footer h3 {
   margin: 0;
   position: relative;
   margin: 20px 0 40px;
-  width: 200px;
 }
 
 .containerform {
-  background-color: #31a9e1;
+  background-color: #1c4ca4;
   padding: 20px 40px;
   border-radius: 5px;
   margin-bottom: 245px; /* revisar este punto */
@@ -150,7 +153,11 @@ footer h3 {
   color: rgb(132, 215, 243);
 }
 
-.form-group input {
+.containerform a:hover {
+  color: #fff;
+}
+
+.form-group-login input {
   background-color: transparent !important;
   border: 0 !important;
   border-bottom: 2px #fff solid !important;
@@ -164,20 +171,20 @@ footer h3 {
   margin-bottom: 40px !important;
 }
 
-.form-group input:focus,
-.form-group input:valid {
+.form-group-login input:focus,
+.form-group-login input:valid {
   outline: 0;
   border-bottom-color: lightblue;
 }
 
-.form-group label {
+.form-group-login label {
   position: absolute;
   top: 5px !important;
   left: 0;
   pointer-events: none !important;
 }
 
-.form-group label span {
+.form-group-login label span {
   display: inline-block;
   font-size: 20px;
   min-width: 5px;
@@ -185,17 +192,32 @@ footer h3 {
   transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-.form-group input:focus + label span,
-.form-group input:valid + label span {
+.form-group-login input:focus + label span,
+.form-group-login input:valid + label span {
   color: lightblue;
   transform: translateY(-30px);
+}
+
+/* Container for list of posts: */
+.post {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
+  background-color: #acb9ce;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Add a shadow */
+  transition: all 0.5s ease;
+  width: 100%;
+
 }
 
 .btnform {
   cursor: pointer;
   display: inline-block;
   width: 100%;
-  background: rgb(170, 204, 216);
+  background: #acb9ce;
   padding: 15px;
   font-family: inherit !important;
   font-size: 20px;
@@ -213,6 +235,7 @@ footer h3 {
 
 .text {
   margin-top: 30px;
+  color: #e1ce9d;
 }
 
 footer a i {
@@ -1149,24 +1172,29 @@ footer a i {
   .display-flex {
     display: flex !important;
   }
+
+  .button-container {
+    text-align: center;
+    margin-bottom: 10px;
+  }
   
   .btn {
-    text-align: center;
-    display: inline-block;
-    padding: 0.5rem 1.2rem;
-    margin: 0;
-    text-decoration: none;
-    font-size: 1rem;
-    border-radius: 0.3rem;
-    border: 1px solid transparent;
+    cursor: pointer;
+    display: inline-block !important;
+    width: 30%;
+    font-size: 1rem !important;
     outline: none;
     color: #1a1a1a;
-    background-color: #aeaeae;
-    transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+    font-weight: bold !important;
+    padding: 0.5rem 1.2rem !important;
+    background: #e1ce9d !important;
+    font-family: inherit !important;
+    font-size: 20px !important;
+    border-radius: 5px !important;
   }
   
   .btn:hover {
-    background-color: #cecece;
+    background-color: #decef0 !important;
   }
   
   .btn.btn-squared {
