--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,11 +3,11 @@
     <h2>Please Login</h2>
 
     <form class="form login-form">
-      <div class="form-group">
+      <div class="form-group-login">
         <input type="text" id="username-login" required/>
         <label for="username-login">Username:</label>
       </div>
-      <div class="form-group">
+      <div class="form-group-login">
         <input  type="password" id="password-login" required/>
         <label for="password-login">Password:</label>
       </div>
