--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -9,6 +9,6 @@
 </div>
 {{/each}}
 
-<div>
+<div class="button-container">
     <a href="api/posts/new"><button class="btn" type="submit">+ New Post</button></a>
 </div>
