--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,9 +2,9 @@
 {{#each posts as |post| }}
 <div class="row mb-4 post">
   <div class="col-12">
-    <h2>
+    <h2 class="header-line">
       <a href="/post/{{post.id}}">{{post.title}}</a>
-      <span>Posted by {{post.user.name}} on {{format_date post.created_at}}</span>
+      <span class="span-tag">Posted by {{post.user.name}} on {{format_date post.created_at}}</span>
     </h2>
   </div>
   <div class="col-12">
