--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,11 +1,13 @@
 
 {{#each posts as |post|}}
-<div>
-    <a href="/post/{{id}}">
-        <h2>{{title}}</h1>
-    </a>
-        <h5>Created on {{format_date created_at}}</h3>
+<div class="post row mb-4">
+    <div class="col-12">
+        <h2 >
+            <a href="/post/{{id}}">{{title}}</a>
+        </h2>
+            <span>Created on {{format_date created_at}}</span>
 
+    </div>
 </div>
 {{/each}}
 
