--- a/views/updatepost.handlebars
+++ b/views/updatepost.handlebars
@@ -11,7 +11,7 @@
         <input value="{{content}}" class="form-input" type="text" id="post-content"/>
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">Update Post</button>
+        <button class="btn" type="submit">Update Post</button>
       </div>
     </form>
 </div>
