Working in styling

--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -138,7 +138,6 @@ footer h3 {
   background-color: #1c4ca4;
   padding: 20px 40px;
   border-radius: 5px;
-  margin-bottom: 245px; /* revisar este punto */
   
 }
 
@@ -200,22 +199,24 @@ footer h3 {
 
 /* Container for list of posts: */
 .post {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-top: 20px;
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  /* justify-content: center; */
+  /* margin-top: 10px; */
   background-color: #acb9ce;
-  padding: 10px;
+  padding: 3px;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Add a shadow */
   transition: all 0.5s ease;
-  width: 100%;
+  /* width: 100%; */
+  /* margin-bottom: 5px; */
 
 }
 
 .span-tag {
   color: #0442c1;
-  font-size: 20px;
+  /* font-size: 5px !important; */
+  /* align-items: end; */
 
 }
 
@@ -1186,15 +1187,15 @@ footer a i {
   }
 
   .button-container {
-    display: block;
-    margin: 10px auto;
+    /* display: block; */
+    /* margin: 20px auto; */
     text-align: center;
   }
   
   .btn {
     cursor: pointer;
     display: inline-block !important;
-    width: 30%;
+    /* width: 30%; */
     font-size: 1rem !important;
     outline: none;
     color: #1a1a1a;
@@ -1387,8 +1388,7 @@ footer a i {
   }
   
   .container {
-    width: 85%;
-    max-width: 1200px;
+    /* max-width: 1200px; */
     margin-left: auto;
     margin-right: auto;
   }
