--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -2,8 +2,8 @@
   <div class="post">
     <div class="col-12">
       <h2 class="header-line">
-        <a href="/post/{{id}}">{{title}}</a>
-        <span class="span-tag">Posted by {{user.name}} on {{format_date created_at}}</span>
+        <a class="h4" href="/post/{{id}}">{{title}}</a>
+        <span class="span-tag text-muted h6">Posted by {{user.name}} on {{format_date created_at}}</span>
       </h2>
     </div>
     <div class="col-12">
@@ -14,13 +14,13 @@
 
   </div>
   <!-- Add buttons here -->
-  <div class="button-container">
+  <div class="button-container mt-5">
     <button class="btn" onclick="location.href='/posts/{{id}}'">Update</button>
     <button class="btn" id="delete-post-button" data-id="{{id}}">Delete Post</button>
   </div>
 <div>
 
-<h4>Comments Section</h2>
+<h4 class="strong mt-5 mb-5">Comments Section</h2>
 {{#each comments as |comment|}}
   <div class="row mb-4 comment">
     <div class="col-12">
@@ -38,7 +38,7 @@
       <textarea class="form-input" id="new-comment" rows="3"></textarea>
     </div>
     <div class="button-container">
-      <button class="btn" type="submit">Add Comment</button>
+      <button class="btn mb-5" type="submit">Add Comment</button>
     </div>
   </form>
 </div>
