--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,4 +1,4 @@
-
+<div class="containerpost">
 {{#each posts as |post|}}
 <div class="post row mb-4">
     <div class="col-12">
@@ -11,6 +11,8 @@
 </div>
 {{/each}}
 
-<div class="button-container">
+<div class="button-container mt-5 mb-5">
     <a href="api/posts/new"><button class="btn" type="submit">+ New Post</button></a>
+</div>
+
 </div>
