--- a/views/updatepost.handlebars
+++ b/views/updatepost.handlebars
@@ -10,7 +10,7 @@
         <label for="post-content">Content:</label>
         <input value="{{content}}" class="form-input" type="text" id="post-content"/>
       </div>
-      <div class="form-group">
+      <div class="mb-5 mt-5 button-container">
         <button class="btn" type="submit">Update Post</button>
       </div>
     </form>
