--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 <div class="containerform">
-    <div class="col-12">
+    <div class="col-12 mb-5">
         <h2>Signup!</h2>
         <form class="form signup-form">
             <div class="form-group-login">
