fixing style for the create post button

--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -8,7 +8,7 @@
         <label for="newpost-content">Content:</label>
         <input class="form-input" type="text" id="newpost-content"/>
       </div>
-      <div class="button-container">
+      <div class="button-container mt-5 mb-5">
         <button class="btn" type="submit">Create Post</button>
       </div>
     </form>
